--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "firebase": "^11.4.0",
+    "lottie-react": "^2.4.1",
+    "lucide": "^0.477.0",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.2.0",
