--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -27,6 +30,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "firebase": "^11.4.0",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
     "lucide": "^0.477.0",
     "lucide-react": "^0.477.0",
@@ -35,6 +39,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
     "sonner": "^2.0.1",
@@ -47,6 +52,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tanstack/react-query-devtools": "^5.67.2",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^22.13.8",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
